Added submodules for dependency

--- a/bare_conf.tex
+++ b/bare_conf.tex
@@ -376,7 +376,7 @@ Email: gasrani@pace.edu}}
 
 
 % use for special paper notices
-%\IEEEspecialpapernotice{(Invited Paper)}
+\IEEEspecialpapernotice{This paper is implementation of original paper.}
 
 
 
