--- a/bare_conf.tex
+++ b/bare_conf.tex
@@ -1,133 +1,20 @@
 
-%% bare_conf.tex
-%% V1.4
-%% 2012/12/27
-%% by Michael Shell
-%% See:
-%% http://www.michaelshell.org/
-%% for current contact information.
-%%
-%% This is a skeleton file demonstrating the use of IEEEtran.cls
-%% (requires IEEEtran.cls version 1.8 or later) with an IEEE conference paper.
-%%
-%% Support sites:
-%% http://www.michaelshell.org/tex/ieeetran/
-%% http://www.ctan.org/tex-archive/macros/latex/contrib/IEEEtran/
-%% and
-%% http://www.ieee.org/
+\documentclass[12pt,conference]{IEEEtran}
 
-%%*************************************************************************
-%% Legal Notice:
-%% This code is offered as-is without any warranty either expressed or
-%% implied; without even the implied warranty of MERCHANTABILITY or
-%% FITNESS FOR A PARTICULAR PURPOSE! 
-%% User assumes all risk.
-%% In no event shall IEEE or any contributor to this code be liable for
-%% any damages or losses, including, but not limited to, incidental,
-%% consequential, or any other damages, resulting from the use or misuse
-%% of any information contained here.
-%%
-%% All comments are the opinions of their respective authors and are not
-%% necessarily endorsed by the IEEE.
-%%
-%% This work is distributed under the LaTeX Project Public License (LPPL)
-%% ( http://www.latex-project.org/ ) version 1.3, and may be freely used,
-%% distributed and modified. A copy of the LPPL, version 1.3, is included
-%% in the base LaTeX documentation of all distributions of LaTeX released
-%% 2003/12/01 or later.
-%% Retain all contribution notices and credits.
-%% ** Modified files should be clearly indicated as such, including  **
-%% ** renaming them and changing author support contact information. **
-%%
-%% File list of work: IEEEtran.cls, IEEEtran_HOWTO.pdf, bare_adv.tex,
-%%                    bare_conf.tex, bare_jrnl.tex, bare_jrnl_compsoc.tex,
-%%                    bare_jrnl_transmag.tex
-%%*************************************************************************
-
-% *** Authors should verify (and, if needed, correct) their LaTeX system  ***
-% *** with the testflow diagnostic prior to trusting their LaTeX platform ***
-% *** with production work. IEEE's font choices can trigger bugs that do  ***
-% *** not appear when using other class files.                            ***
-% The testflow support page is at:
-% http://www.michaelshell.org/tex/testflow/
-
-
-
-% Note that the a4paper option is mainly intended so that authors in
-% countries using A4 can easily print to A4 and see how their papers will
-% look in print - the typesetting of the document will not typically be
-% affected with changes in paper size (but the bottom and side margins will).
-% Use the testflow package mentioned above to verify correct handling of
-% both paper sizes by the user's LaTeX system.
-%
-% Also note that the "draftcls" or "draftclsnofoot", not "draft", option
-% should be used if it is desired that the figures are to be displayed in
-% draft mode.
-%
-\documentclass[conference]{IEEEtran}
-% Add the compsoc option for Computer Society conferences.
-%
-% If IEEEtran.cls has not been installed into the LaTeX system files,
-% manually specify the path to it like:
-% \documentclass[conference]{../sty/IEEEtran}
-
-
-
-
-
-% Some very useful LaTeX packages include:
-% (uncomment the ones you want to load)
-
-
-% *** MISC UTILITY PACKAGES ***
-%
-%\usepackage{ifpdf}
-% Heiko Oberdiek's ifpdf.sty is very useful if you need conditional
-% compilation based on whether the output is pdf or dvi.
-% usage:
-% \ifpdf
-%   % pdf code
-% \else
-%   % dvi code
-% \fi
-% The latest version of ifpdf.sty can be obtained from:
-% http://www.ctan.org/tex-archive/macros/latex/contrib/oberdiek/
-% Also, note that IEEEtran.cls V1.7 and later provides a builtin
-% \ifCLASSINFOpdf conditional that works the same way.
-% When switching from latex to pdflatex and vice-versa, the compiler may
-% have to be run twice to clear warning/error messages.
+\usepackage{url}
+\usepackage{graphicx}
+\graphicspath{ {./images/} }
+\usepackage{float}
+\floatstyle{boxed} 
+\restylefloat{figure}
 
 
 
 
 
 
-% *** CITATION PACKAGES ***
-%
-%\usepackage{cite}
-% cite.sty was written by Donald Arseneau
-% V1.6 and later of IEEEtran pre-defines the format of the cite.sty package
-% \cite{} output to follow that of IEEE. Loading the cite package will
-% result in citation numbers being automatically sorted and properly
-% "compressed/ranged". e.g., [1], [9], [2], [7], [5], [6] without using
-% cite.sty will become [1], [2], [5]--[7], [9] using cite.sty. cite.sty's
-% \cite will automatically add leading space, if needed. Use cite.sty's
-% noadjust option (cite.sty V3.8 and later) if you want to turn this off
-% such as if a citation ever needs to be enclosed in parenthesis.
-% cite.sty is already installed on most LaTeX systems. Be sure and use
-% version 4.0 (2003-05-27) and later if using hyperref.sty. cite.sty does
-% not currently provide for hyperlinked citations.
-% The latest version can be obtained at:
-% http://www.ctan.org/tex-archive/macros/latex/contrib/cite/
-% The documentation is contained in the cite.sty file itself.
 
 
-
-
-
-
-% *** GRAPHICS RELATED PACKAGES ***
-%
 \ifCLASSINFOpdf
   % \usepackage[pdftex]{graphicx}
   % declare the path(s) where your graphic files are
@@ -169,175 +56,10 @@
 
 
 
-
-% *** MATH PACKAGES ***
-%
-%\usepackage[cmex10]{amsmath}
-% A popular package from the American Mathematical Society that provides
-% many useful and powerful commands for dealing with mathematics. If using
-% it, be sure to load this package with the cmex10 option to ensure that
-% only type 1 fonts will utilized at all point sizes. Without this option,
-% it is possible that some math symbols, particularly those within
-% footnotes, will be rendered in bitmap form which will result in a
-% document that can not be IEEE Xplore compliant!
-%
-% Also, note that the amsmath package sets \interdisplaylinepenalty to 10000
-% thus preventing page breaks from occurring within multiline equations. Use:
-%\interdisplaylinepenalty=2500
-% after loading amsmath to restore such page breaks as IEEEtran.cls normally
-% does. amsmath.sty is already installed on most LaTeX systems. The latest
-% version and documentation can be obtained at:
-% http://www.ctan.org/tex-archive/macros/latex/required/amslatex/math/
-
-
-
-
-
-% *** SPECIALIZED LIST PACKAGES ***
-%
-%\usepackage{algorithmic}
-% algorithmic.sty was written by Peter Williams and Rogerio Brito.
-% This package provides an algorithmic environment fo describing algorithms.
-% You can use the algorithmic environment in-text or within a figure
-% environment to provide for a floating algorithm. Do NOT use the algorithm
-% floating environment provided by algorithm.sty (by the same authors) or
-% algorithm2e.sty (by Christophe Fiorio) as IEEE does not use dedicated
-% algorithm float types and packages that provide these will not provide
-% correct IEEE style captions. The latest version and documentation of
-% algorithmic.sty can be obtained at:
-% http://www.ctan.org/tex-archive/macros/latex/contrib/algorithms/
-% There is also a support site at:
-% http://algorithms.berlios.de/index.html
-% Also of interest may be the (relatively newer and more customizable)
-% algorithmicx.sty package by Szasz Janos:
-% http://www.ctan.org/tex-archive/macros/latex/contrib/algorithmicx/
-
-
-
-
-% *** ALIGNMENT PACKAGES ***
-%
-%\usepackage{array}
-% Frank Mittelbach's and David Carlisle's array.sty patches and improves
-% the standard LaTeX2e array and tabular environments to provide better
-% appearance and additional user controls. As the default LaTeX2e table
-% generation code is lacking to the point of almost being broken with
-% respect to the quality of the end results, all users are strongly
-% advised to use an enhanced (at the very least that provided by array.sty)
-% set of table tools. array.sty is already installed on most systems. The
-% latest version and documentation can be obtained at:
-% http://www.ctan.org/tex-archive/macros/latex/required/tools/
-
-
-% IEEEtran contains the IEEEeqnarray family of commands that can be used to
-% generate multiline equations as well as matrices, tables, etc., of high
-% quality.
-
-
-
-
-% *** SUBFIGURE PACKAGES ***
-%\ifCLASSOPTIONcompsoc
-%  \usepackage[caption=false,font=normalsize,labelfont=sf,textfont=sf]{subfig}
-%\else
-%  \usepackage[caption=false,font=footnotesize]{subfig}
-%\fi
-% subfig.sty, written by Steven Douglas Cochran, is the modern replacement
-% for subfigure.sty, the latter of which is no longer maintained and is
-% incompatible with some LaTeX packages including fixltx2e. However,
-% subfig.sty requires and automatically loads Axel Sommerfeldt's caption.sty
-% which will override IEEEtran.cls' handling of captions and this will result
-% in non-IEEE style figure/table captions. To prevent this problem, be sure
-% and invoke subfig.sty's "caption=false" package option (available since
-% subfig.sty version 1.3, 2005/06/28) as this is will preserve IEEEtran.cls
-% handling of captions.
-% Note that the Computer Society format requires a larger sans serif font
-% than the serif footnote size font used in traditional IEEE formatting
-% and thus the need to invoke different subfig.sty package options depending
-% on whether compsoc mode has been enabled.
-%
-% The latest version and documentation of subfig.sty can be obtained at:
-% http://www.ctan.org/tex-archive/macros/latex/contrib/subfig/
-
-
-
-
-% *** FLOAT PACKAGES ***
-%
-%\usepackage{fixltx2e}
-% fixltx2e, the successor to the earlier fix2col.sty, was written by
-% Frank Mittelbach and David Carlisle. This package corrects a few problems
-% in the LaTeX2e kernel, the most notable of which is that in current
-% LaTeX2e releases, the ordering of single and double column floats is not
-% guaranteed to be preserved. Thus, an unpatched LaTeX2e can allow a
-% single column figure to be placed prior to an earlier double column
-% figure. The latest version and documentation can be found at:
-% http://www.ctan.org/tex-archive/macros/latex/base/
-
-
-%\usepackage{stfloats}
-% stfloats.sty was written by Sigitas Tolusis. This package gives LaTeX2e
-% the ability to do double column floats at the bottom of the page as well
-% as the top. (e.g., "\begin{figure*}[!b]" is not normally possible in
-% LaTeX2e). It also provides a command:
-%\fnbelowfloat
-% to enable the placement of footnotes below bottom floats (the standard
-% LaTeX2e kernel puts them above bottom floats). This is an invasive package
-% which rewrites many portions of the LaTeX2e float routines. It may not work
-% with other packages that modify the LaTeX2e float routines. The latest
-% version and documentation can be obtained at:
-% http://www.ctan.org/tex-archive/macros/latex/contrib/sttools/
-% Do not use the stfloats baselinefloat ability as IEEE does not allow
-% \baselineskip to stretch. Authors submitting work to the IEEE should note
-% that IEEE rarely uses double column equations and that authors should try
-% to avoid such use. Do not be tempted to use the cuted.sty or midfloat.sty
-% packages (also by Sigitas Tolusis) as IEEE does not format its papers in
-% such ways.
-% Do not attempt to use stfloats with fixltx2e as they are incompatible.
-% Instead, use Morten Hogholm'a dblfloatfix which combines the features
-% of both fixltx2e and stfloats:
-%
-% \usepackage{dblfloatfix}
-% The latest version can be found at:
-% http://www.ctan.org/tex-archive/macros/latex/contrib/dblfloatfix/
-
-
-
-
-% *** PDF, URL AND HYPERLINK PACKAGES ***
-%
-%\usepackage{url}
-% url.sty was written by Donald Arseneau. It provides better support for
-% handling and breaking URLs. url.sty is already installed on most LaTeX
-% systems. The latest version and documentation can be obtained at:
-% http://www.ctan.org/tex-archive/macros/latex/contrib/url/
-% Basically, \url{my_url_here}.
-
-
-
-
-% *** Do not adjust lengths that control margins, column widths, etc. ***
-% *** Do not use packages that alter fonts (such as pslatex).         ***
-% There should be no need to do such things with IEEEtran.cls V1.6 and later.
-% (Unless specifically asked to do so by the journal or conference you plan
-% to submit to, of course. )
-
-
-% correct bad hyphenation here
-\hyphenation{op-tical net-works semi-conduc-tor}
-
-
 \begin{document}
-%
-% paper title
-% can use linebreaks \\ within to get better formatting as desired
-% Do not put math or special symbols in the title.
-\title{Bare Demo of IEEEtran.cls for Conferences}
 
+\title{SuRF: Implementation and RocksDB }
 
-% author names and affiliations
-% use a multiple column layout for up to three different
-% affiliations
 \author{\IEEEauthorblockN{Dhruvil Gandhi}
 \IEEEauthorblockA{Seidenberg School of CSIS\\
 Pace University\\
@@ -350,33 +72,8 @@ Pace University\\
 New York, NY\\
 Email: gasrani@pace.edu}}
 
-% conference papers do not typically use \thanks and this command
-% is locked out in conference mode. If really needed, such as for
-% the acknowledgment of grants, issue a \IEEEoverridecommandlockouts
-% after \documentclass
-
-% for over three affiliations, or if they all won't fit within the width
-% of the page, use this alternative format:
-% 
-%\author{\IEEEauthorblockN{Michael Shell\IEEEauthorrefmark{1},
-%Homer Simpson\IEEEauthorrefmark{2},
-%James Kirk\IEEEauthorrefmark{3}, 
-%Montgomery Scott\IEEEauthorrefmark{3} and
-%Eldon Tyrell\IEEEauthorrefmark{4}}
-%\IEEEauthorblockA{\IEEEauthorrefmark{1}School of Electrical and Computer Engineering\\
-%Georgia Institute of Technology,
-%Atlanta, Georgia 30332--0250\\ Email: see http://www.michaelshell.org/contact.html}
-%\IEEEauthorblockA{\IEEEauthorrefmark{2}Twentieth Century Fox, Springfield, USA\\
-%Email: homer@thesimpsons.com}
-%\IEEEauthorblockA{\IEEEauthorrefmark{3}Starfleet Academy, San Francisco, California 96678-2391\\
-%Telephone: (800) 555--1212, Fax: (888) 555--1212}
-%\IEEEauthorblockA{\IEEEauthorrefmark{4}Tyrell Inc., 123 Replicant Street, Los Angeles, California 90210--4321}}
-
-
-
-
-% use for special paper notices
-\IEEEspecialpapernotice{This paper is implementation of original paper.}
+%special paper notices
+\IEEEspecialpapernotice{This paper is a report of implementation of original paper: SuRF: Practical Range Query Filtering with Fast Succinct Tries}
 
 
 
@@ -384,188 +81,182 @@ Email: gasrani@pace.edu}}
 % make the title area
 \maketitle
 
-% As a general rule, do not put math, special symbols or citations
-% in the abstract
+
+
 \begin{abstract}
-The abstract goes here.
+We present implementation of  Succinct Range Filter (SuRF), a fast and compact data
+structure for approximate membership tests. It supports  single-key lookups and common
+range queries: open-range queries, closed-range queries, and range
+counts based on a new data structure called the Fast Succinct
+Trie (FST) that matches the point and range query performance of
+state-of-the-art order-preserving indexes, while consuming only
+10 bits per trie node. The false positive rates in SuRF can be modified to satisfy different application needs.
+We are evaluating SuRF in RocksDB as a replacement for its Bloom filters
+to reduce I/O  by filtering requests before they access on-disk data
+structures; the data is 100GB. The experiment uses YCSB data.
 \end{abstract}
 
-% no keywords
+\begin{IEEEkeywords}
+Filters, ARF, Bloom Filter, SuRF, rocksdb, FST
+\end{IEEEkeywords}
 
-
-
-
-% For peer review papers, you can put extra information on the cover
-% page as needed:
-% \ifCLASSOPTIONpeerreview
-% \begin{center} \bfseries EDICS Category: 3-BBND \end{center}
-% \fi
-%
-% For peerreview papers, this IEEEtran command inserts a page break and
-% creates the second title. It will be ignored for other modes.
 \IEEEpeerreviewmaketitle
 
 
 
-\section{Introduction}
+\section{Background}
 % no \IEEEPARstart
-This demo file is intended to serve as a ``starter file''
-for IEEE conference papers produced under \LaTeX\ using
-IEEEtran.cls version 1.8 and later.
-% You must have at least 2 lines in the paragraph with the drop letter
-% (should never be an issue)
-I wish you the best of success.
 
-\hfill mds
- 
-\hfill December 27, 2012
+There are different approximate query membership data structures designed and evaluated. Filters answers approximate membership of a query. Filters act as a guard when accessing data from devices which have high latency and limited bandwidth. Traditionally designed filters only support point queries, complete keys must be provided to the filter to test for membership. The paper \cite{1} proposes a new filter, SuRF or Succinct Range Filter which filters with both point queries (complete keys) and range queries(range of keys or partial keys). SuRF uses suffixed keys to improve false positive rate of the filter. The paper \cite{1} has experimentation implemented and evaluated for SuRF implemented in C++ \cite{3} and also tests performance \cite{4} of RocksDB \cite{2} by Facebook for point queries, range queries on single threaded and multi-threaded implementation. They evaluation states 1.5x to 5x improvement in RocksDB using SuRF over RocksDB with Bloom Filter. 
 
-\subsection{Subsection Heading Here}
-Subsection text here.
+\section{Motivation}
+
+SuRF is memory efficient \cite{1}, improves throughput and reduces I/O substantially. It seems promising technique to optimize database. To implement and re-evaluate the proposed solution, we tried to replicated and reproduce the results. RocksDB by facebook \cite{2} uses Bloom Filter, a point query filter. We try to replicate the experiment, replacing Bloom Filter with SuRF and compare them.
 
 
-\subsubsection{Subsubsection Heading Here}
-Subsubsection text here.
+\section{Design}
+The experiment code is available on github for SuRF \cite{3} and RocksDB \cite{2}. We first try to evaluate both.
+
+The basic version of SuRF (SuRF-Base) stores the minimum length key prefixes such that it can uniquely identify each key. Specifically, SuRF-Base only stores an additional byte for each key
+beyond the shared prefixes.
+
+\begin{figure}[H]
+\centering
+\includegraphics[width=2.5in]{surf}
+\caption{Different SuRF versions}
+\end{figure}
+
+Different variations of SuRF are as
+\begin{itemize}
+	\item Basic SuRF
+	\item SuRF with Hashed Key Suffixes
+	\item SuRF with Real Key Suffixes
+	\item SuRF with Mixed Key Suffixes
+\end{itemize}
+
+\section{Implementation}
+We carried out a set of experimentation for both SuRF and the example application for RocksDB.
+First we implemented SuRF basic code to compare Bloom Filter, No Filter and different variations of SuRF. Then we implemented different variants of SuRF with multi-threading support. Data from Yahoo's Cloud Serving Benchmark\cite{6} is used. The experiments is not implemented for email list. 
+
+Our first run used the following configuration( t3.large on AWS \cite{5}):
+
+\begin{itemize}
+	\item2.5 GHz Intel Scalable Processor
+	\item Intel AVX†, Intel AVX2†, Intel Turbo
+	\item EBS Optimized(SSD for 300 I/Ops)
+	\item Enhanced Networking†
+	\item 2 vCPUs
+	\item 8GB of memory
+\end{itemize}
+This configuration ran out of memory on first run. 
+
+We switched to DigitalOcean with following configuration:
+\begin{itemize}
+	\item Intel(R) Xeon(R) CPU E5-2650L v3 1.80GHz
+	\item 6vCPUs
+	\item 16GB Multi-EEC 
+	\item 160GB SSD
+	\item 8GB of memory
+\end{itemize}
+
+\subsection{RocksDB Experiment}
+After successful run of the SuRF code, we implemented the experiment carried out with RocksDB. The experiment implements SuRF in RocksDB and uses 100GB of data. Different queries are carried out  to test data with no-filter, bloom filter and SuRF. Throughput and seek timings in different scenarios recorded. The data is tested with 100\% positive and 50\% empty queries.
+
+\section{Evaluation}
+
+\subsection{SuRF Single Threaded}
+When running single threaded operations,
+the output was seen as:
 
 
-% An example of a floating figure using the graphicx package.
-% Note that \label must occur AFTER (or within) \caption.
-% For figures, \caption should occur after the \includegraphics.
-% Note that IEEEtran v1.7 and later has special internal code that
-% is designed to preserve the operation of \label within \caption
-% even when the captionsoff option is in effect. However, because
-% of issues like this, it may be the safest practice to put all your
-% \label just after \caption rather than within \caption{}.
-%
-% Reminder: the "draftcls" or "draftclsnofoot", not "draft", class
-% option should be used if it is desired that the figures are to be
-% displayed while in draft mode.
-%
-%\begin{figure}[!t]
-%\centering
-%\includegraphics[width=2.5in]{myfigure}
-% where an .eps filename suffix will be assumed under latex, 
-% and a .pdf suffix will be assumed for pdflatex; or what has been declared
-% via \DeclareGraphicsExtensions.
-%\caption{Simulation Results.}
-%\label{fig_sim}
-%\end{figure}
-
-% Note that IEEE typically puts floats only at the top, even when this
-% results in a large percentage of a column being occupied by floats.
-
-
-% An example of a double column floating figure using two subfigures.
-% (The subfig.sty package must be loaded for this to work.)
-% The subfigure \label commands are set within each subfloat command,
-% and the \label for the overall figure must come after \caption.
-% \hfil is used as a separator to get equal spacing.
-% Watch out that the combined width of all the subfigures on a 
-% line do not exceed the text width or a line break will occur.
-%
-%\begin{figure*}[!t]
-%\centering
-%\subfloat[Case I]{\includegraphics[width=2.5in]{box}%
-%\label{fig_first_case}}
-%\hfil
-%\subfloat[Case II]{\includegraphics[width=2.5in]{box}%
-%\label{fig_second_case}}
-%\caption{Simulation results.}
-%\label{fig_sim}
-%\end{figure*}
-%
-% Note that often IEEE papers with subfigures do not employ subfigure
-% captions (using the optional argument to \subfloat[]), but instead will
-% reference/describe all of them (a), (b), etc., within the main caption.
-
-
-% An example of a floating table. Note that, for IEEE style tables, the 
-% \caption command should come BEFORE the table. Table text will default to
-% \footnotesize as IEEE normally uses this smaller font for tables.
-% The \label must come after \caption as always.
-%
-%\begin{table}[!t]
-%% increase table row spacing, adjust to taste
-%\renewcommand{\arraystretch}{1.3}
-% if using array.sty, it might be a good idea to tweak the value of
-% \extrarowheight as needed to properly center the text within the cells
-%\caption{An Example of a Table}
-%\label{table_example}
-%\centering
-%% Some packages, such as MDW tools, offer better commands for making tables
-%% than the plain LaTeX2e tabular which is used here.
-%\begin{tabular}{|c||c|}
-%\hline
-%One & Two\\
-%\hline
-%Three & Four\\
-%\hline
-%\end{tabular}
-%\end{table}
-
-
-% Note that IEEE does not put floats in the very first column - or typically
-% anywhere on the first page for that matter. Also, in-text middle ("here")
-% positioning is not used. Most IEEE journals/conferences use top floats
-% exclusively. Note that, LaTeX2e, unlike IEEE journals/conferences, places
-% footnotes above bottom floats. This can be corrected via the \fnbelowfloat
-% command of the stfloats package.
-
-
-
-\section{Conclusion}
-The conclusion goes here.
+\begin{table}[H]
+\caption{Point Query Result}
+\begin{tabular}{|c||c|c|}
+\hline
+Operation & Throughput & FPR\\
+\hline  
+Bloom Filter & 4.18142 & 0.00771089\\
+\hline
+SuRF & 2.25069 & 0.0414119\\
+\hline
+SuRFHash & 1.9057 & 0.00162597\\
+\hline
+SuRFReal & 1.95216 & 0.0054646\\
+\hline
+SuRFMixed & 1.61184 & 0.00951337\\
+\hline
+\end{tabular}
+\end{table}
 
 
 
 
-% conference papers do not normally have an appendix
+\subsection{SuRF Multi-Threaded}
+
+When running different filters multi-threaded, we get the following throughput graph:
+
+\begin{figure}[H]
+\centering
+\includegraphics[width=3.5in]{thread}
+\caption{Multi Threaded}
+\end{figure}
 
 
-% use section* for acknowledgement
+\subsection {RocksDB}
+When running with RocksDB, we first run it with point queries for No Filter, Bloom FIiter, and SuRF.
+We observe that Bloom Filter has better throughput with Bloom Filter. This can be due to cached data. This needs to be examined again.
+
+\begin{figure}[H]
+	\includegraphics[width=3.5in]{point}
+	\caption{Point Query RocksDB}
+\end{figure}
+
+We perform next set of evaluations with 50\% success range queries for No Filter, Bloom FIiter, and SuRF. We clear system cache before running each experiment.
+
+\begin{figure}[H]
+	\includegraphics[width=3.5in]{cr}
+	\caption{50\% empty results query RocksDB}
+\end{figure}
+
+We observe that SuRF significantly outperforms Bloom Filter and without filter operations. The I/O could not be obtained on the cloud due to logical disk structure naming. 
+
+
+\subsection{Limitation}
+The only limitation in implementation of this is there is lack of resources on the code developed.
+
+\subsection {Comparision and Conclusion}
+After implementing all the experiments, we conclude that SuRF is a promising filter for databases with improvements in throughput. In case of RocksDB, the I/O was monitored with monitoring metrics that DigitalOcean provides. The number of operations were reduced when using SuRF. We were unable to compare it to ARQ as the build step was not executed.
+
+\section{Future Work}
+We will like to implement more data-points and test for SuRF and compare it with ARF. We will like to run more tests with RocksDB. 
+
 \section*{Acknowledgment}
 
+We would like to thanks Dr. Juan Shan at Pace University. And DigitalOcean for final minutes changes in the billing plan to allow acclerated execution. The git repository for this work is available at \cite{7}
 
-The authors would like to thank...
+\begin{thebibliography}{r1}
 
+\bibitem{1}
+Huanchen Zhang, Hyeontaek Lim, Viktor Leis, David G. Andersen, Michael Kaminsky, Kimberly Keeton, and Andrew Pavlo. 2018.\emph{SuRF: Practical Range Query Filtering with Fast Succinct Tries}. In Proceedings of the 2018 International Conference on Management of Data (SIGMOD '18). ACM, New York, NY, USA, 323-336. DOI: \url{https://doi.org/10.1145/3183713.3196931}
+%H.~Kopka and P.~W. Daly, \emph{A Guide to \LaTeX}, 3rd~ed.\hskip 1em plus
+ % 0.5em minus 0.4em\relax Harlow, England: Addison-Wesley, 1999.  
 
+\bibitem{2} 2018. RocksDB SuRF Implementation Github \url{https://github.com/efficient/rocksdb}  
 
+\bibitem{3} 2018. SuRF Repository \url{https://github.com/efficient/SuRF}
 
+\bibitem{4}2018.  RocksDB Repository by Facebook \url{https://github.com/facebook/rocksdb} 
 
-% trigger a \newpage just before the given reference
-% number - used to balance the columns on the last page
-% adjust value as needed - may need to be readjusted if
-% the document is modified later
-%\IEEEtriggeratref{8}
-% The "triggered" command can be changed if desired:
-%\IEEEtriggercmd{\enlargethispage{-5in}}
+\bibitem{5}2015. AWS EC2 intance \url{https://aws.amazon.com/ec2/instance-types/t3/} 
 
-% references section
+\bibitem{6}2018. Yahoo Cloud Serving Benchmark \url{https://research.yahoo.com/news/yahoo-cloud-serving-benchmark/?guccounter=1}
 
-% can use a bibliography generated by BibTeX as a .bbl file
-% BibTeX documentation can be easily obtained at:
-% http://www.ctan.org/tex-archive/biblio/bibtex/contrib/doc/
-% The IEEEtran BibTeX style support page is at:
-% http://www.michaelshell.org/tex/ieeetran/bibtex/
-%\bibliographystyle{IEEEtran}
-% argument is your BibTeX string definitions and bibliography database(s)
-%\bibliography{IEEEabrv,../bib/paper}
-%
-% <OR> manually copy in the resultant .bbl file
-% set second argument of \begin to the number of references
-% (used to reserve space for the reference number labels box)
-\begin{thebibliography}{1}
+\bibitem{7}2018. SuRF-Report Github \url{https://github.com/dhruv857/rocksdb}
 
-\bibitem{IEEEhowto:kopka}
-H.~Kopka and P.~W. Daly, \emph{A Guide to \LaTeX}, 3rd~ed.\hskip 1em plus
-  0.5em minus 0.4em\relax Harlow, England: Addison-Wesley, 1999.
+\bibitem{8}2018. Working rocksdb Repo \url{https://github.com/dhruv857/rocksdb}
 
 \end{thebibliography}
 
-
-
-
-% that's all folks
 \end{document}
 
 
